--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!--/////////// Featured Brands //////////-->
         <section class="shadow">
-          <figure>
+          <figure class="column_med">
             <img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
             <figcaption>royalty free image from www.sxc.hu</figcaption>
           </figure>
