--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!--/////////// Featured Brands //////////-->
         <section class="shadow">
-          <figure class="column_med">
+          <figure>
             <img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
             <figcaption>royalty free image from www.sxc.hu</figcaption>
           </figure>
@@ -90,7 +90,7 @@
         <!--/////////// Ends Featured Brands //////////-->
         
         <!--/////////// Archive List //////////-->
-        <section class="column_small">
+        <section>
           <h2>Shoe Archive</h2>
           <h3><a href="#">2014</a></h3>
           <ul>
