--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
+        <div class="column">
         <section class="shadow">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -144,7 +145,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </section>
-
+      </div>
         <section class="shadow">
           <figure>
             <img src="images/skate_shoe.jpg" alt="Pair of Skater Shoes">
