automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
-        <div class="column">
+      <div class="column">
+        <div class="small">
         <section class="shadow">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -145,6 +146,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </section>
+      </div>
       </div>
         <section class="shadow">
           <figure>
