--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!--/////////// Ends Featured Brands //////////-->
         
         <!--/////////// Archive List //////////-->
-        <section class="shadow">
+        <section>
           <h2>Shoe Archive</h2>
           <h3><a href="#">2014</a></h3>
           <ul>
@@ -135,6 +135,8 @@
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
+      <div class="column">
+        <div class="small">
         <section class="shadow">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -144,7 +146,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </section>
-
+      </div>
+      </div>
         <section class="shadow">
           <figure>
             <img src="images/skate_shoe.jpg" alt="Pair of Skater Shoes">
